fix: correct clipping of reload icon

--- a/sencha-workspace/SlateTasksManager/sass/src/view/TasksManager.scss
+++ b/sencha-workspace/SlateTasksManager/sass/src/view/TasksManager.scss
@@ -18,3 +18,6 @@
     }
 }
 
+.x-btn-icon-el.x-tbar-loading {
+    background-size: 98%;
+}
